hard-gists/a430d460966d64edc6cad71c502d7005/run.log
=== Docker Run Log for a430d460966d64edc6cad71c502d7005 ===
Started at: Mi 29. Okt 18:52:44 CET 2025

[2025-10-29 18:52:44] START: Running container for a430d460966d64edc6cad71c502d7005
[2025-10-29 18:52:45] SUCCESS: Container 9e709df4d3f8a20fc2b0b39229f3678db3c3165774deaafc79147e5274e4a674 started for a430d460966d64edc6cad71c502d7005
=== Container logs for a430d460966d64edc6cad71c502d7005 ===
  File "/snippet.py", line 147
    print item
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for a430d460966d64edc6cad71c502d7005 ===
[2025-10-29 18:52:47] INFO: Container 9e709df4d3f8a20fc2b0b39229f3678db3c3165774deaafc79147e5274e4a674 has stopped
